test/spec_vectors/try_table/fail/module_7.wat
(module (func (result i32) (try_table (result i32) (i64.const 42))))